syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

option go_package = "github.com/elojah/trax/internal/user/dto";

import "pkg/gogoproto/gogo.proto";
import "pkg/pbtypes/string.proto";
import "pkg/paginate/paginate.proto";

import "internal/user/user.proto";

message SigninResp {
    string AccessToken    = 1;
    string RefreshToken   = 2;
}

message SignupReq {
    string Firstname    = 1;
    string Lastname     = 2;
    string Email        = 3;
    string Password     = 4;
}

message SigninReq {
    string Email        = 1;
    string Password     = 2;
}

message FetchUserReq {
    bool Me                     = 1;

	bytes ID                    = 2 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
	bytes GroupID              = 3 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
}

message UpdateUserReq {
    pbtypes.String Firstname    = 1;
    pbtypes.String Lastname     = 2;
    pbtypes.String AvatarURL    = 3;
}

message ListUserReq {
	paginate.Paginate Paginate        = 1 [(gogoproto.nullable) = true];
	string Search                     = 2;

	bool OwnGroup                    = 3;

    repeated bytes IDs                = 4 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
	repeated bytes GroupIDs          = 5 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
	bytes RoleID                      = 6 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
}

message ListUserResp {
	repeated user.U Users             = 1 [(gogoproto.nullable) = false];
	uint64 Total                      = 2;
}

message InviteUserReq {
    string Email                      = 1;
    bytes GroupID                    = 2 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
	repeated bytes RoleIDs            = 3 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];
}
